tests/fixtures/invalid/pow_str_bytes.py
# Cannot call pow() with Str, Bytes
x = pow("hello", b"hello")
